--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang=en-us>
 <head>
 	<title>Hangman</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
+	<p>Press any key to get started!</p>
+	<p class="win">Wins: 0 <br>
+		<span id="docUnderScore">  </span> 
+	</p>
+	<p class="rightGuess"></p>
+	<p class="guesses"> Number of guesses remaining: 9 </p>
+	<p>Letters already guessed: <span id="wrongGuess"> </span></p>
 
-
-
+ <script type="text/javascript" src="assets/javascript/game3.js"></script>
 </body>
+</html> 
+
