--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 	<div id="guessContent">
 		<h3>Press any key to get started!</h3>
 		<p class="win">Wins: 0 <br><br>
-			<span id="docUnderScore">  </span> 
+			<span class="docUnderScore">  </span> 
 		</p>
 		<p class="guesses"> Number of guesses remaining: 9 </p>
 		<p>Letters already guessed: <span id="wrongGuess"> </span></p>
 	</div>
 </div>
+
+<footer>&copy;2017 Elaine C.</footer>
 
  <script type="text/javascript" src="assets/javascript/game3.js"></script>
 </body>
