--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div id="guessContent">
 		<h3>Press any key to get started!</h3>
 		<p class="win">Wins: 0 <br><br>
-			<span class="docUnderScore">  </span> 
+			<div class="docUnderScore">  </div> 
 		</p>
 		<p class="guesses"> Number of guesses remaining: 9 </p>
 		<p>Letters already guessed: <span id="wrongGuess"> </span></p>
