--- a/index.html
+++ b/index.html
@@ -5,27 +5,89 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet"> 
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div id="page">
+	<nav class="navbar navbar-default">
+  		<div class="container-fluid">
+	    <!-- Elaine and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">Elaine C.</a>
+	    </div>
 
-<div id="content">
-	<div id="header">
-		<p><img src="assets/images/header.png" alt="wheel of fortune"></p>
-	</div>
-	<div id="guessContent">
-		<h3>Press any key to get started!</h3>
-		<p class="win">Wins: 0 <br><br>
-			<div class="docUnderScore">  </div> 
-		</p>
-		<p class="guesses"> Number of guesses remaining: 9 </p>
-		<p>Letters already guessed: <span id="wrongGuess"> </span></p>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav navbar-right">
+	        <li><a href="https://elaine01.github.io/Bootstrap-Portfolio/index.html">About</a></li>
+	        <li><a href="https://elaine01.github.io/Bootstrap-Portfolio/portfolio.html">Portfolio</a></li>
+	        <li><a href="https://elaine01.github.io/Bootstrap-Portfolio/contact.html">Contact</a></li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
+
+
+
+
+
+	<div class="container">
+		<div class="row"> <!-- row 1 -->
+			<div class="col-xs-12"> <!--  -->
+				<div id="content">
+					<div id="header">
+						<h1>Pokemon <small>Hangman Game</small></h1>
+					</div>		
+				</div>
+			</div> <!-- Close main body container -->
+		</div> <!-- Close row 1 tag -->
+	</div> <!-- Close container tag -->
+
+
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-3">
+				<div class="media">
+					<div class="media-right">
+						<div class="displayImage">
+							<img id="guessImage" src="assets/images/pikachu.png">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-9">
+				<div id="guessContent">
+					<h3>Press any letter to get started! <br><br><small> Gotta catch em all!</small></h3>
+					<p class="win">Wins: 0 <br>
+						<div class="docUnderScore"> 0 </div> 
+					</p>
+					<p class="guesses"> Number of guesses remaining: 9 </p>
+					<p>Letters already guessed: <span id="wrongGuess"> </span></p>
+				</div>	
+			</div>	
+		</div>
 	</div>
 </div>
 
 <footer>&copy;2017 Elaine C.</footer>
+<script type="text/javascript" src="assets/javascript/game3.js"></script>
 
- <script type="text/javascript" src="assets/javascript/game3.js"></script>
 </body>
 </html> 
 
