added optional bgm

--- a/index.html
+++ b/index.html
@@ -85,9 +85,18 @@
 	</div>
 </div>
 
-<footer>&copy;2017 Elaine C.</footer>
-<script type="text/javascript" src="assets/javascript/game3.js"></script>
-
+<div class="container">
+	<div class="row footer">
+		<div class="col-xs-12 col-md-3">
+			<audio controls>
+				<source src="assets/sounds/pokemon_opening.mp3" type="audio/mpeg">
+			</audio>
+		</div>
+		<div class="col-md-9">
+			<footer>&copy;2017 Elaine C.</footer>
+			<script type="text/javascript" src="assets/javascript/game3.js"></script>
+	</div>
+</div>
 </body>
 </html> 
 
