--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet"> 
 
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -43,10 +47,6 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 
-
-
-
-
 	<div class="container">
 		<div class="row"> <!-- row 1 -->
 			<div class="col-xs-12"> <!--  -->
@@ -59,19 +59,18 @@
 		</div> <!-- Close row 1 tag -->
 	</div> <!-- Close container tag -->
 
-
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 col-md-3">
-				<div class="media">
+			<div class="col-xs-12 col-md-4">
+				<div class="media" style="padding-left: 50%">
 					<div class="media-right">
 						<div class="displayImage">
-							<img id="guessImage" src="assets/images/pikachu.png">
+							<img id="guessImage" alt="pokemon" src="assets/images/pikachu.png">"
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-9">
+			<div class="col-md-8">
 				<div id="guessContent">
 					<h3>Press any letter to get started! <br><br><small> Gotta catch em all!</small></h3>
 					<p class="win">Wins: 0 <br>
@@ -94,9 +93,11 @@
 		</div>
 		<div class="col-md-9">
 			<footer>&copy;2017 Elaine C.</footer>
-			<script type="text/javascript" src="assets/javascript/game3.js"></script>
+		</div>
 	</div>
-</div>
+</div>	
+<script type="text/javascript" src="assets/javascript/game3.js"></script>
+
 </body>
 </html> 
 
