--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 col-md-4">
-				<div class="media" style="padding-left: 50%">
+			<div class="col-xs-12 col-md-5">
+				<div class="media" style="padding-left: 22%">
 					<div class="media-right">
 						<div class="displayImage">
-							<img id="guessImage" alt="pokemon" src="assets/images/pikachu.png">"
+							<img id="guessImage" alt="pokemon" src="assets/images/pikachu.png">
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-8">
+			<div class="col-md-7">
 				<div id="guessContent">
 					<h3>Press any letter to get started! <br><br><small> Gotta catch em all!</small></h3>
 					<p class="win">Wins: 0 <br>
