--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
 <div class="container">
 	<div class="row footer">
 		<div class="col-xs-12 col-md-3">
-			<audio controls>
+			<audio controls autoplay>
 				<source src="assets/sounds/pokemon_opening.mp3" type="audio/mpeg">
+				Your browser does not support the audio element.
 			</audio>
 		</div>
 		<div class="col-md-9">
