--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			</div>
 			<div class="col-md-7">
 				<div id="guessContent">
-					<h3>Press any letter to get started! <br><br><small> Gotta catch em all!</small></h3>
+					<h3>Press any letter to play! <br><br><small> Gotta catch em all!</small></h3>
 					<p class="win">Wins: 0 <br>
 						<div class="docUnderScore"> 0 </div> 
 					</p>
